# NeuralNetworkCoordinates

./: README.md  pyproject.toml
.github/workflows/: release.yml
docs/: index.md
src/NeuralNetworkCoordinates/: NeuralNetworkCoordinates.py  __init__.py
