[project]
name = "NeuralNetworkCoordinates"
version = "1.0.0"  # Required
description = "NeuralNetworkCoordinates: Precise coordinates for visualizing intricate neural network transformations. Uncover spatial insights, enhance interpretability, and tailor custom visualizations with this specialized Python package."  # Optional
readme = "README.md" # Optional
requires-python = ">=3.10.12"
license = {text="The Cat Standard License v1.0"}
keywords = ["neural networks", "ANN", "analysis", "coordinates", "visualise", "functional transformation"]  # Optional
authors = [
  {name = "Caxton Emerald S", email = "ces.softwaresolutions@gmail.com" },
  {name = "Vengattaraman T", email = "vengattaraman.t@pondiuni.ac.in" }# Optional
]
maintainers = [
  {name = "Caxton Emerald S", email = "ces.softwaresolutions@gmail.com" } # Optional
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Scientific/Engineering",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only"
]
dependencies = [ 
  "numpy>=1.23.5", "keras>=2.14.0"
]
[project.urls]  
"Homepage" = "https://caxtonemerald-s.github.io/NeuralNetworkCoordinates/"
"Bug Reports" = "https://github.com/CaxtonEmerald-S/NeuralNetworkCoordinates/issues"
"Source" = "https://github.com/CaxtonEmerald-S/NeuralNetworkCoordinates/"
"Documentation" = "https://github.com/CaxtonEmerald-S/NeuralNetworkCoordinates/wiki"
"Wiki" = "https://github.com/CaxtonEmerald-S/NeuralNetworkCoordinates/wiki"
